[package]
name = "sigma_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
format_serde_error = "0.3.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_yaml = "0.9.17"
